Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16703

Regression, taskbar button doesn't work after starting notepad

    XMLWordPrintable

Details

    Description

      The attached video shows the problem; after starting notepad, the taskbar button does not minimize the window. After clicking on the desktop and back to notepad, it works.
      Reported against 0.4.14-dev-997-gb326312.

      Unhiding rev: https://git.reactos.org/?p=reactos.git;a=commitdiff;h=8ad0eae6879029219ce3b62b554869a9d33aefa9 (SVN r74968)

      Attachments

        1. ReactOS_notepad_taskbar_bug.webm
          286 kB
          blueghost
        2. r73441_ok.webm
          402 kB
          reactosfanboy
        3. taskswnd_c_hack.patch
          0.4 kB
          DougLyons
        4. ntuser_focus.patch
          0.6 kB
          blueghost
        5. ntuser_focus2.patch
          0.7 kB
          blueghost
        6. CORE-16703_PR2396_for0_4_13RC.patch
          2 kB
          reactosfanboy

        Issue Links

          Activity

            People

              reactosfanboy reactosfanboy
              blueghost blueghost
              Votes:
              4 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: